Criação de banner

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,19 +1,14 @@
-body {
-    background-color: #f7f3e9;
+:root {
+    --marrom: #aa7448;
+    --amarelo: #f9e8cc;
 }
+
+
 .navbar, .footer {
-    background-color: #8b4513;
+    background-color: var(--marrom);
 }
-.navbar-brand, .nav-link, .footer-text {
-    color: #fff !important;
-}
-.carousel-item img {
-    height: 500px;
-    object-fit: cover;
-}
+
+
 .card {
     margin-bottom: 30px;
-}
-.card-title, .card-text {
-    color: #5a3e36;
 }
