--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,77 @@
-:root {
-    --marrom: #aa7448;
-    --amarelo: #f9e8cc;
+body {
+    background-color: #dba274;
 }
-
-
 .navbar, .footer {
-    background-color: var(--marrom);
+    background-color: #aa7448;
 }
-
-
+.navbar-brand, .nav-link, .footer-text {
+    color: #fff !important;
+}
+.carousel-item img {
+    height: 500px;
+    object-fit: cover;
+}
 .card {
     margin-bottom: 30px;
+}
+.card-title, .card-text {
+    color: #5a3e36;
+}
+
+
+span {
+    color: rgb(94, 14, 14);
+    margin: 2vh;
+}
+
+/* footer----------------------------------------------------------------------- */
+
+/* Estilos para o footer */
+footer {
+    background-color: #ffffff;
+    color: #ffffff;
+    padding: 20px 0;
+}
+
+/* Estilos para as colunas de links */
+footer .col-md-3 ul {
+    list-style: none;
+    padding: 0;
+}
+
+footer .col-md-3 ul li {
+    margin-bottom: 10px;
+}
+
+footer .col-md-3 ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/* Estilos para o campo de email e botão de inscrição */
+footer form {
+    margin-top: 10px;
+}
+
+footer input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+}
+
+footer button.btn-primary {
+    background-color: #007bff;
+    border: none;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Estilos para os ícones de mídia social */
+footer i {
+    font-size: 24px;
+    margin-left: 10px;
+    color: #ffffff;
 }
