--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,34 @@
+:root {
+    --corBase: #aa7448;
+}
+
+
 body {
-    background-color: #dba274;
+    background-color: #e7c5aa;
 }
-.navbar, .footer {
-    background-color: #aa7448;
+
+.navbar,
+.footer {
+    background-color: var(--corBase);
 }
-.navbar-brand, .nav-link, .footer-text {
+
+.navbar-brand,
+.nav-link,
+.footer-text {
     color: #fff !important;
 }
+
 .carousel-item img {
     height: 500px;
     object-fit: cover;
 }
+
 .card {
     margin-bottom: 30px;
 }
-.card-title, .card-text {
+
+.card-title,
+.card-text {
     color: #5a3e36;
 }
 
@@ -23,6 +37,22 @@ span {
     color: rgb(94, 14, 14);
     margin: 2vh;
 }
+
+
+.logo {
+    width: 25vh;
+}
+
+#sobre,#botaoContato {
+    border: 2px solid transparent;
+}
+
+
+#sobre:hover,#botaoContato:hover {
+    border-bottom: 2px solid #815837;
+    transition: 0.5s;
+}
+
 
 /* footer----------------------------------------------------------------------- */
 
